Fix test failures