@@ -100,6 +100,18 @@
             </goals>
             <configuration>
               <compilerId>groovy-eclipse-compiler</compilerId>
+              <release>8</release>
+            </configuration>
+          </execution>
+          <execution>
+            <id>default-testCompile</id>
+            <phase>process-test-sources</phase>
+            <goals>
+              <goal>testCompile</goal>
+            </goals>
+            <configuration>
+              <compilerId>groovy-eclipse-compiler</compilerId>
+              <release>8</release>
             </configuration>
           </execution>
         </executions>
@@ -115,6 +127,22 @@
             <version>${groovy-eclipse-batch.version}</version>
           </dependency>
         </dependencies>
+      </plugin>
+
+
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <version>${maven-surefire-plugin.version}</version>
+        <configuration>
+          <argLine>
+            --add-exports com.azure.core/com.azure.core.implementation.http=ALL-UNNAMED
+            --add-exports com.azure.core/com.azure.core.implementation.serializer.jackson=ALL-UNNAMED
+            --add-exports com.azure.core/com.azure.core.implementation.util=ALL-UNNAMED
+            --add-opens com.azure.storage.queue/com.azure.storage.queue=ALL-UNNAMED
+            --add-opens com.azure.storage.queue/com.azure.storage.queue.implementation=ALL-UNNAMED
+          </argLine>
+        </configuration>
       </plugin>
     </plugins>
   </build>
